--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,11 +29,11 @@
 <br>
 <br>
 <center>
-<img src="images/black.png" width="620" height="15" border="0">
+<img src="images/white.png" width="620" height="15" border="0">
 <br>
 <img src="images/new.png" border="0"> 20050501 update of this online presentation<br>
 <br>
-<img src="images/black.png" width="620" height="15" border="0">
+<img src="images/white.png" width="620" height="15" border="0">
 </center>
 <br>
 <br>
@@ -75,16 +75,16 @@ very simple and fun-working-with open, read, write, close and seek framework
 <br>
 <br>
 <center>
-<img src="images/black.png" width="620" height="15" border="0">
+<img src="images/white.png" width="620" height="15" border="0">
 <br>
 <img src="images/download.png" border="0" height="160"></a><br>
-<a href="http://sourceforge.net/cvs/?group_id=61236/" target="_blank"><img src="images/cvs.png" border="0" height="40"></a>
+<!--a href="http://sourceforge.net/cvs/?group_id=61236/" target="_blank"><img src="images/cvs.png" border="0" height="40"></a-->
 <a href="quh/changes.html" target="_blank"><img src="images/changes.png" border="0" height="40"></a>
 <a href="quh/readme.html" target="_blank"><img src="images/readme.png" border="0" height="40"></a>
 <a href="quh/license.html" target="_blank"><img src="images/license.png" border="0" height="40"></a>
 <a href="mailto:d_i_r_k_@gmx.net"><img src="images/contact.png" border="0" height="40"></a>
 <br>
-<img src="images/black.png" width="620" height="15" border="0">
+<img src="images/white.png" width="620" height="15" border="0">
 </center>
 <br>
     </td>
