--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,27 +1,100 @@
 <html><head>
 <link rel="icon" href="images/icon.png" type="image/png">
 <title>Quh aims to play everything that makes noise!</title>
-<style type="text/css">
-<!--
-a:hover{color:#000000;background-color:#ff00ff;}
-a{text-decoration:none}
--->
-</style>
 </head>
-<body bgcolor="#000000" text="#ff00ff" link="#ff00ff" vlink="#ff00ff" alink="#ff00ff" background="images/bg3.png" style="background-image:url(images/bg3.png); background-attachment:fixed; background-repeat:no-repeat">
-<table width="100%">
-  <tr height="570">
-  </tr>
+<body bgcolor="#000000" text="#ffffff">
+<br>
+<br>
+<br>
+<center><img src="images/q1.png" height="150"><img src="images/hemsa.png" height="110">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="images/bg3.png" border="0">
+<table width="640">
   <tr>
-    <td align="left">
+  <td bgcolor="#000000">
+<font color="#ffffff">
 <tt>
-<font size="7">
-<a href="http://developer.berlios.de/projects/quh">DOWNLOAD</a>
-    </td>
-    <td align="right">
-<a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=4373" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
+<br>
+<br>
+<br>
+<br>
+<center>
+<br>
+<br>
+<br>
+<br>
+<center>
+<img src="images/black.png" width="620" height="15" border="0">
+<br>
+<img src="images/new.png" border="0"> 20050501 update of this online presentation<br>
+<br>
+<img src="images/black.png" width="620" height="15" border="0">
+</center>
+<br>
+<br>
+<img src="images/q3.png" height="20" border="0"> will replace all other audio players because there are too many
+<br> 
+<br>
+<img src="images/q2.png" height="20" border="0"> supports 100+ different noise containing file,
+stream or data formats/sources like
+cdda, mp3, ogg, flac, sox sound tools (aiff, al, au, auto, avr, cdr, cvs, dat, vms, gsm, hcom, la, lu, maud, mp3, nul, prc,
+raw, sb, sf, sl, smp, sndt, sph, 8svx, sw, txw, ub, ul, uw, voc, ogg, vox, wav, wve), sndlib (raw, aifc, aiff, snd (Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff (Amiga), smp, voc, nist, sf2), sndfile (aiff, au, avr, htk, iff, mat, paf, pvf, raw, sds, sf, voc, w64, wav, xi), audiofile (raw, aifc, aiff, snd (Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff (Amiga), smp, voc, nist, sf2), mikmod (669, dsm, far, it, med, mod, mtm, s3m, stm, ult, xm), xmp (669, ac1d, alm, amd, chn, crb, di, digi, emod, exo, far, fc-m, fnk, imf, it, kris, ksm, m15, mdl, med, mod, modl, mp, mtm, mtn, np, okta, pm, pp10, prom, pru, ptm, rad, s3m, sfx, stim, stm, stx, tp, ult, unic, wn, wow, xann, xm, zen), wav, stdin, raw
+<br>
+<br>
+<img src="images/q1.png" height="20" border="0"> supports 10+ different ways of producing
+noise like alsa, oss, sdl, pc speaker (if present), ...
+<br>
+<br>
+<img src="images/q2.png" height="20" border="0"> (optionally) takes advantage of GPL'd
+libraries like audiofile, libsndfile, libxmp, mikmod, sndlib, libsidplay,
+lirc, libSDL, ...
+<br>
+<br>
+<img src="images/q3.png" height="20" border="0"> can be controlled with joysticks or remote
+controls (lirc)
+<br>
+<br>
+<img src="images/q1.png" height="20" border="0"> is also an reference example how to
+cultivate bloated API's into an old fashioned, always sufficient, easy learning,
+very simple and fun-working-with open, read, write, close and seek framework
+<br>
+<br>
+<img src="images/q3.png" height="20" border="0"> speaks text files in different languages using speech synthesis
+<br>
+<br>
+<img src="images/q1.png" height="20" border="0"> does NOT require an installed desktop enviroment
+<br>
+<br>
+<img src="images/q3.png" height="20" border="0"> sources utilize a working and sufficient autoconf replacement
+<br>
+<br>
+<br>
+<center>
+<img src="images/black.png" width="620" height="15" border="0">
+<br>
+<img src="images/download.png" border="0" height="160"></a><br>
+<a href="http://sourceforge.net/cvs/?group_id=61236/" target="_blank"><img src="images/cvs.png" border="0" height="40"></a>
+<a href="quh/changes.html" target="_blank"><img src="images/changes.png" border="0" height="40"></a>
+<a href="quh/readme.html" target="_blank"><img src="images/readme.png" border="0" height="40"></a>
+<a href="quh/license.html" target="_blank"><img src="images/license.png" border="0" height="40"></a>
+<a href="mailto:d_i_r_k_@gmx.net"><img src="images/contact.png" border="0" height="40"></a>
+<br>
+<img src="images/black.png" width="620" height="15" border="0">
+</center>
+<br>
     </td>
   </tr>
 </table>
+</center>
+  </td>
+  </tr>
+</center>
+</table> 
+<a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=4373" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
 </BODY>
 </HTML>
