--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -11,70 +11,73 @@
 <br>
 <br>
 <br>
-<br>
-<br>
 <img src="images/bg3.png" border="0">
+<br>
+<br>
+<br>
+<br>
 <table width="640">
   <tr>
-  <td bgcolor="#000000">
-<font color="#ffffff">
+    <td>
+<center>
 <tt>
-<br>
-<br>
-<br>
-<br>
-<center>
-<br>
-<br>
-<br>
-<br>
-<center>
 <img src="images/white.png" width="620" height="15" border="0">
 <br>
 <img src="images/new.png" border="0"> 20050501 update of this online presentation<br>
 <br>
 <img src="images/white.png" width="620" height="15" border="0">
-</center>
 <br>
 <br>
-<img src="images/q3.png" height="20" border="0"> will replace all other audio players because there are too many
+<img src="images/q3.png" height="20" border="0"> will replace all other audio 
+players because there are too many
 <br> 
 <br>
-<img src="images/q2.png" height="20" border="0"> supports 100+ different noise containing file,
-stream or data formats/sources like
-cdda, mp3, ogg, flac, sox sound tools (aiff, al, au, auto, avr, cdr, cvs, dat, vms, gsm, hcom, la, lu, maud, mp3, nul, prc,
-raw, sb, sf, sl, smp, sndt, sph, 8svx, sw, txw, ub, ul, uw, voc, ogg, vox, wav, wve), sndlib (raw, aifc, aiff, snd (Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff (Amiga), smp, voc, nist, sf2), sndfile (aiff, au, avr, htk, iff, mat, paf, pvf, raw, sds, sf, voc, w64, wav, xi), audiofile (raw, aifc, aiff, snd (Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff (Amiga), smp, voc, nist, sf2), mikmod (669, dsm, far, it, med, mod, mtm, s3m, stm, ult, xm), xmp (669, ac1d, alm, amd, chn, crb, di, digi, emod, exo, far, fc-m, fnk, imf, it, kris, ksm, m15, mdl, med, mod, modl, mp, mtm, mtn, np, okta, pm, pp10, prom, pru, ptm, rad, s3m, sfx, stim, stm, stx, tp, ult, unic, wn, wow, xann, xm, zen), wav, stdin, raw
+<img src="images/q2.png" height="20" border="0"> supports 100+ different noise
+containing file, stream or data formats/sources like
+cdda, mp3, ogg, flac, sox sound tools (aiff, al, au, auto, avr, cdr, cvs,
+dat, vms, gsm, hcom, la, lu, maud, mp3, nul, prc, raw, sb, sf, sl, smp,
+sndt, sph, 8svx, sw, txw, ub, ul, uw, voc, ogg, vox, wav, wve), sndlib (raw,
+aifc, aiff, snd (Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff
+(Amiga), smp, voc, nist, sf2), sndfile (aiff, au, avr, htk, iff, mat, paf,
+pvf, raw, sds, sf, voc, w64, wav, xi), audiofile (raw, aifc, aiff, snd
+(Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff (Amiga), smp, voc,
+nist, sf2), mikmod (669, dsm, far, it, med, mod, mtm, s3m, stm, ult, xm),
+xmp (669, ac1d, alm, amd, chn, crb, di, digi, emod, exo, far, fc-m, fnk,
+imf, it, kris, ksm, m15, mdl, med, mod, modl, mp, mtm, mtn, np, okta, pm,
+pp10, prom, pru, ptm, rad, s3m, sfx, stim, stm, stx, tp, ult, unic, wn, wow,
+xann, xm, zen), wav, stdin, raw
 <br>
 <br>
-<img src="images/q1.png" height="20" border="0"> supports 10+ different ways of producing
-noise like alsa, oss, sdl, pc speaker (if present), ...
+<img src="images/q1.png" height="20" border="0"> supports 10+ different ways of
+producing noise like alsa, oss, sdl, pc speaker (if present), ...
 <br>
 <br>
-<img src="images/q2.png" height="20" border="0"> (optionally) takes advantage of GPL'd
-libraries like audiofile, libsndfile, libxmp, mikmod, sndlib, libsidplay,
-lirc, libSDL, ...
+<img src="images/q2.png" height="20" border="0"> (optionally) takes advantage of
+libraries like audiofile, sndfile, xmp (Extended Module Player), mikmod, sndlib,
+sidplay, <!--lirc, -->SDL, festival, ...
 <br>
 <br>
-<img src="images/q3.png" height="20" border="0"> can be controlled with joysticks or remote
-controls (lirc)
+<img src="images/q3.png" height="20" border="0"> can be controlled with a joystick
+<!-- or remote control (lirc)-->
 <br>
 <br>
-<img src="images/q1.png" height="20" border="0"> is also an reference example how to
-cultivate bloated API's into an old fashioned, always sufficient, easy learning,
-very simple and fun-working-with open, read, write, close and seek framework
+<img src="images/q1.png" height="20" border="0"> is like an reference example
+on how to cultivate bloated API's into an file-operations analogy
 <br>
 <br>
-<img src="images/q3.png" height="20" border="0"> speaks text files in different languages using speech synthesis
+<img src="images/q3.png" height="20" border="0"> speaks text files in different 
+languages using speech synthesis (festival)
 <br>
 <br>
-<img src="images/q1.png" height="20" border="0"> does NOT require an installed desktop enviroment
+<img src="images/q1.png" height="20" border="0"> does NOT require an installed 
+desktop enviroment or GUI toolkit
 <br>
 <br>
-<img src="images/q3.png" height="20" border="0"> sources utilize a working and sufficient autoconf replacement
+<img src="images/q3.png" height="20" border="0"> sources utilize a working and 
+sufficient autoconf replacement
 <br>
 <br>
 <br>
-<center>
 <img src="images/white.png" width="620" height="15" border="0">
 <br>
 <img src="images/download.png" border="0" height="160"></a><br>
@@ -86,15 +89,10 @@ very simple and fun-working-with open, read, write, close and seek framework
 <br>
 <img src="images/white.png" width="620" height="15" border="0">
 </center>
-<br>
     </td>
   </tr>
 </table>
 </center>
-  </td>
-  </tr>
-</center>
-</table> 
 <a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=4373" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
 </BODY>
 </HTML>
