--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,11 +29,11 @@
 <br>
 <br>
 <img src="images/q3.png" height="20" border="0"> will replace all other audio 
-players because there are too many
+players because there are too many :-)
 <br> 
 <br>
 <img src="images/q2.png" height="20" border="0"> supports 100+ different noise
-containing file, stream or data formats/sources like
+containing file, stream or data formats/sources/filters like:<br>
 cdda, mp3, ogg, flac, sox sound tools (aiff, al, au, auto, avr, cdr, cvs,
 dat, vms, gsm, hcom, la, lu, maud, mp3, nul, prc, raw, sb, sf, sl, smp,
 sndt, sph, 8svx, sw, txw, ub, ul, uw, voc, ogg, vox, wav, wve), sndlib (raw,
@@ -65,6 +65,10 @@ sidplay, <!--lirc, -->SDL, festival, ...
 on how to cultivate bloated API's into an file-operations analogy
 <br>
 <br>
+<img src="images/q2.png" height="20" border="0"> uses keyboard shortcuts similar
+to those of MPlayer
+<br>
+<br>
 <img src="images/q3.png" height="20" border="0"> speaks text files in different 
 languages using speech synthesis (festival)
 <br>
@@ -73,8 +77,8 @@ languages using speech synthesis (festival)
 desktop enviroment or GUI toolkit
 <br>
 <br>
-<img src="images/q3.png" height="20" border="0"> sources utilize a working and 
-sufficient autoconf replacement
+<img src="images/q3.png" height="20" border="0"> sources utilize for the first
+time a real autoconf replacement
 <br>
 <br>
 <br>
