--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,6 +1,26 @@
 <html><head>
 <link rel="icon" href="images/icon.png" type="image/png">
 <title>Quh aims to play everything that makes noise!</title>
+<META NAME="description" CONTENT="Quh aims to play everything that makes noise!">
+<META NAME="author" CONTENT="NoisyB">
+<META NAME="keywords" CONTENT="">
+<META NAME="robots" CONTENT="follow">
+<!-- Dublin Core -->
+<meta name="DC.Title" content="Quh aims to play everything that makes noise!">
+<meta name="DC.Creator" content="NoisyB">
+<meta name="DC.Subject" content="Quh aims to play everything that makes noise!">
+<meta name="DC.Description" content="Quh aims to play everything that makes noise!">
+<meta name="DC.Publisher" content="NoisyB">
+<meta name="DC.Contributor" content="">
+<meta name="DC.Date" content="">
+<meta name="DC.Type" content="Software">
+<meta name="DC.Format" content="text/html">
+<meta name="DC.Identifier" content="http://quh.berlios.de">
+<meta name="DC.Source" content="">
+<meta name="DC.Language" content="en">
+<meta name="DC.Relation" content="Index">
+<meta name="DC.Coverage" content="">
+<meta name="DC.Rights" content="GPL">
 </head>
 <body bgcolor="#000000" text="#ffffff">
 <br>
