--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,7 @@
 <tt>
 <img src="images/white.png" width="620" height="15" border="0">
 <br>
-<img src="images/new.png" border="0"> 20050501 update of this online presentation<br>
+<img src="images/new.png" border="0"> 20060320 Quh 0.3.0 is available from CVS<br>
 <br>
 <img src="images/white.png" width="620" height="15" border="0">
 <br>
@@ -104,12 +104,12 @@ time a real autoconf replacement
 <br>
 <img src="images/white.png" width="620" height="15" border="0">
 <br>
-<img src="images/download.png" border="0" height="160"></a><br>
-<!--a href="http://sourceforge.net/cvs/?group_id=61236/" target="_blank"><img src="images/cvs.png" border="0" height="40"></a-->
+<!--img src="images/download.png" border="0" height="160"></a><br-->
+<a href="http://www.berlios.de/cvs/?group_id=61236/" target="_blank"><img src="images/cvs.png" border="0" height="40"></a>
 <a href="quh/changes.html" target="_blank"><img src="images/changes.png" border="0" height="40"></a>
 <a href="quh/readme.html" target="_blank"><img src="images/readme.png" border="0" height="40"></a>
 <a href="quh/license.html" target="_blank"><img src="images/license.png" border="0" height="40"></a>
-<a href="mailto:d_i_r_k_@gmx.net"><img src="images/contact.png" border="0" height="40"></a>
+<a href="mailto:noisyb@gmx.net"><img src="images/contact.png" border="0" height="40"></a>
 <br>
 <img src="images/white.png" width="620" height="15" border="0">
 </center>
