--- a/quh/changes.html
+++ b/quh/changes.html
@@ -1,4 +1,7 @@
 <html><head>
 <link rel="icon" href="images/icon.png" type="image/png">
 <title>Quh - CHANGES</title></head><body bgcolor="#ffffff"><tt><pre>
+<a name="030">0.3.0</a><br>
+- initial CVS only release
+<p>
 </tt></body></html>
