--- a/htdocs/index.htm
+++ b/htdocs/index.htm
@@ -105,7 +105,7 @@ time a real autoconf replacement
 <img src="images/white.png" width="620" height="15" border="0">
 <br>
 <!--img src="images/download.png" border="0" height="160"></a><br-->
-<a href="http://www.berlios.de/cvs/?group_id=61236/" target="_blank"><img src="images/cvs.png" border="0" height="40"></a>
+<a href="http://developer.berlios.de/cvs/?group_id=4373" target="_blank"><img src="images/cvs.png" border="0" height="40"></a>
 <a href="quh/changes.html" target="_blank"><img src="images/changes.png" border="0" height="40"></a>
 <a href="quh/readme.html" target="_blank"><img src="images/readme.png" border="0" height="40"></a>
 <a href="quh/license.html" target="_blank"><img src="images/license.png" border="0" height="40"></a>
