*** empty log message ***

--- a/htdocs/index.htm
+++ b/htdocs/index.htm
@@ -69,12 +69,12 @@ xann, xm, zen), wav, stdin, raw
 <br>
 <br>
 <img src="images/q1.png" height="20" border="0"> supports 10+ different ways of
-producing noise like alsa, oss, sdl, pc speaker (if present), ...
+producing noise like Alsa, OSS, ESD, libao, SDL, PC speaker (if present), ...
 <br>
 <br>
 <img src="images/q2.png" height="20" border="0"> (optionally) takes advantage of
-libraries like audiofile, sndfile, xmp (Extended Module Player), mikmod, sndlib,
-sidplay, <!--lirc, -->SDL, festival, ...
+libraries like audiofile, sndfile, xmp (Extended Module Player), mikmod, sidplay,
+SDL, festival, ...
 <br>
 <br>
 <img src="images/q3.png" height="20" border="0"> can be controlled with a joystick
@@ -95,6 +95,10 @@ languages using speech synthesis (festival)
 <br>
 <img src="images/q1.png" height="20" border="0"> does NOT require an installed 
 desktop enviroment or GUI toolkit
+<br>
+<br>
+<img src="images/q2.png" height="20" border="0"> is only ~100kBytes in size with all support enabled<br>
+(~50 with upx compression)
 <br>
 <br>
 <img src="images/q3.png" height="20" border="0"> sources utilize for the first
