--- a/htdocs/index.htm
+++ b/htdocs/index.htm
@@ -54,18 +54,17 @@ players because there are too many :-)
 <br>
 <img src="images/q2.png" height="20" border="0"> supports 100+ different noise
 containing file, stream or data formats/sources/filters like:<br>
-cdda, mp3, ogg, flac, sox sound tools (aiff, al, au, auto, avr, cdr, cvs,
-dat, vms, gsm, hcom, la, lu, maud, mp3, nul, prc, raw, sb, sf, sl, smp,
-sndt, sph, 8svx, sw, txw, ub, ul, uw, voc, ogg, vox, wav, wve), sndlib (raw,
-aifc, aiff, snd (Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff
-(Amiga), smp, voc, nist, sf2), sndfile (aiff, au, avr, htk, iff, mat, paf,
-pvf, raw, sds, sf, voc, w64, wav, xi), audiofile (raw, aifc, aiff, snd
-(Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff (Amiga), smp, voc,
-nist, sf2), mikmod (669, dsm, far, it, med, mod, mtm, s3m, stm, ult, xm),
-xmp (669, ac1d, alm, amd, chn, crb, di, digi, emod, exo, far, fc-m, fnk,
-imf, it, kris, ksm, m15, mdl, med, mod, modl, mp, mtm, mtn, np, okta, pm,
-pp10, prom, pru, ptm, rad, s3m, sfx, stim, stm, stx, tp, ult, unic, wn, wow,
-xann, xm, zen), wav, stdin, raw
+cdda read, flac decode, mp3 decode (using libmad), xmp (669, ac1d, alm, amd,
+chn, crb, di, digi, emod, exo, far, fc-m, fnk, imf, it, kris, ksm, m15, mdl,
+med, mod, modl, mp, mtm, mtn, np, okta, pm, pp10, prom, pru, ptm, rad, s3m,
+sfx, stim, stm, stx, tp, ult, unic, wn, wow, xann, xm, zen), libsidplay2
+(sid, dat, inf, c64, prg, p00, info, data, str, mus), sndfile (aiff, au,
+avr, htk, iff, mat, paf, pvf, raw, sds, sf, voc, w64, wav, xi), flite (txt),
+vorbis decode, audiofile (aifc, aiff, au, avr, bicsf, iff, mpeg, nist, raw,
+sd1, sd2, sf2, smp, snd, voc, wav), wav read, raw read, alsa, cdda write
+(tracks and cue), cddb, lyrics, console, demux, esound, id3 (using
+libid3tag), joystick (using libsdl), libao, oss (linux), raw write, read,
+sdl (audio), speaker, stdin read, stdout write, vol, wav write
 <br>
 <br>
 <img src="images/q1.png" height="20" border="0"> supports 10+ different ways of
