*** empty log message ***

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -54,18 +54,26 @@ players because there are too many :-)
 <br>
 <img src="images/q2.png" height="20" border="0"> supports 100+ different noise
 containing file, stream or data formats/sources/filters like:<br>
-cdda, mp3, ogg, flac, sox sound tools (aiff, al, au, auto, avr, cdr, cvs,
-dat, vms, gsm, hcom, la, lu, maud, mp3, nul, prc, raw, sb, sf, sl, smp,
-sndt, sph, 8svx, sw, txw, ub, ul, uw, voc, ogg, vox, wav, wve), sndlib (raw,
-aifc, aiff, snd (Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff
-(Amiga), smp, voc, nist, sf2), sndfile (aiff, au, avr, htk, iff, mat, paf,
-pvf, raw, sds, sf, voc, w64, wav, xi), audiofile (raw, aifc, aiff, snd
-(Sun), au (Next), wav, bicsf, mpeg, sd1, sd2, avr, iff (Amiga), smp, voc,
-nist, sf2), mikmod (669, dsm, far, it, med, mod, mtm, s3m, stm, ult, xm),
-xmp (669, ac1d, alm, amd, chn, crb, di, digi, emod, exo, far, fc-m, fnk,
-imf, it, kris, ksm, m15, mdl, med, mod, modl, mp, mtm, mtn, np, okta, pm,
-pp10, prom, pru, ptm, rad, s3m, sfx, stim, stm, stx, tp, ult, unic, wn, wow,
-xann, xm, zen), wav, stdin, raw
+cdda read, ffmpeg (3g2, 3gp, 4xm, RoQ, aac, ac3, adts, aiff, alaw, asf, au,
+avi, avs, crc, daud, dts, dv, dv1394, dvd, ea, ffm, film_cpk, flic, flv,
+gif, h261, h263, h264, idcin, ingenient, ipmovie, m4v, matroska, mjpeg, mm,
+mmf, mov, mov,mp4,m4a,3gp,3g2,mj2, mp2, mp3, mp4, mpeg, mpeg1video,
+mpeg2video, mpegts, mpegvideo, mpjpeg, mulaw, nsv, nut, nuv, ogg, psp,
+psxstr, rawvideo, redir, rm, rtp, rtsp, s16be, s16le, s8, sdp, shn, smk,
+sol, svcd, swf, tta, u16be, u16le, u8, vcd, video4linux, video4linux2, vmd,
+vob, voc, wav, wc3movie, wsaud, wsvqa, yuv4mpegpipe), flac decode, mp3
+decode (using libmad), mikmod (669, amf, dsm, far, imf, it, med, mod, mtm,
+s3m, stm, ult, xm), xmp (669, ac1d, alm, amd, chn, crb, di, digi, emod, exo,
+far, fc-m, fnk, imf, it, kris, ksm, m15, mdl, med, mod, modl, mp, mtm, mtn,
+np, okta, pm, pp10, prom, pru, ptm, rad, s3m, sfx, stim, stm, stx, tp, ult,
+unic, wn, wow, xann, xm, zen), libsidplay2 (sid, dat, inf, c64, prg, p00,
+info, data, str, mus), sndfile (aiff, au, avr, htk, iff, mat, paf, pvf, raw,
+sds, sf, voc, w64, wav, xi), flite (txt), vorbis decode, audiofile (aifc,
+aiff, au, avr, bicsf, iff, mpeg, nist, raw, sd1, sd2, sf2, smp, snd, voc,
+wav), wav read, raw read, alsa, cdda write (tracks and cue), cddb, lyrics,
+console, demux, esound, id3 (using libid3tag), joystick (using libsdl),
+libao, oss (linux), raw write, read, sdl (audio), speaker, stdin read,
+stdout write, vol, wav write
 <br>
 <br>
 <img src="images/q1.png" height="20" border="0"> supports 10+ different ways of
