*** empty log message ***

--- a/htdocs/index.htm
+++ b/htdocs/index.htm
@@ -130,5 +130,23 @@ time a real autoconf replacement
 </table>
 </center>
 <a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=4373" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
-</BODY>
+<!-- Begin Webstats4U code -->
+<!-- Title: Quh -->
+<!-- URL: http://quh.berlios.de/ -->
+<script language="JavaScript" type="text/javascript" src="http://m1.webstats4u.com/m.js">
+</script>
+<script language="JavaScript" type="text/javascript">
+<!--
+  webstats4u("ADxgsAYFdTpD4fs/wmFkKysebBaA", 0);
+// -->
+</script>
+<noscript>
+<a target="_blank" href="http://www.webstats4u.com/stats?ADxgsAYFdTpD4fs/wmFkKysebBaA"><img
+src="http://m1.webstats4u.com/n?id=ADxgsAYFdTpD4fs/wmFkKysebBaA"
+border="0" width="18" height="18"
+alt="Webstats4U - Free web site statistics
+Personal homepage website counter"></a><br>
+<a target="_blank" href="http://www.webstats4u.com/">Free counter</a>
+</noscript>
+<!-- End Webstats4U code --></BODY>
 </HTML>
