*** empty log message ***

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -26,7 +26,7 @@
 <font size="7">Quh</font><br>
 Having ears makes sense again<br>
 <br>
-Quhg will replace all other audio 
+Quh will replace all other audio 
 players because there are too many :-)
 <br> 
 <br>
