*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -10,6 +10,12 @@
   version and all missing features will be revised and added release by release
 - plays flac, mp3, ogg, wav and raw
 - supports id3 tags
+<p>
+<a name="032">0.3.2</a><br>
+- added --ao[=DRIVER] write to soundcard using libao DRIVER (default: auto)
+- added libaudiofile support
+- added support for CDDA playback
+- added CDDB support
 <!--
  - alsa support
  - libst support
