*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -15,8 +15,10 @@
 - added --ao[=DRIVER] write to soundcard using libao DRIVER (default: auto)
 - added libaudiofile support
 - added support for CDDA playback
-- added CDDB support
+- added --cddb[=URL]  read CDDB info from server with URL
 <!--
+ - fix --cddb=URL
+ - fix --cdda[=MB]
  - alsa support
  - libst support
  - ape support
