*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -15,10 +15,12 @@
 - added --ao[=DRIVER] write to soundcard using libao DRIVER (default: auto)
 - added libaudiofile (for reading) support
 - added support for (cable-free) CDDA playback
-- added --cddb[=URL]  read CDDB info from server with URL
+- added --cddb read CDDB info from freedb.org
 - added --esd write to soundcard using EsounD
 <!--
  - test/fix misc options
+
+ - add --rr
 
  - joystick support
  - alsa support
@@ -50,6 +52,7 @@
  - fix --cddb=URL
  - fix --cdda[=MB]
  - fix stdout
+ - fix --wav and --raw output (indices!)
  - fix decode
 -->
 </tt></body></html>
