*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -26,7 +26,7 @@
  - alsa support
  - libst support
  - lyrics support
- - server/client support
+ - server/client support (streaming)
 
  - midi support (timidity)
  - GameBoy GBS Music soundtracks of Nintendo GameBoy games
@@ -48,6 +48,7 @@
  - soundmosaic effect
  - rewind/fastforward _with_ sound
  - cd-text and cd-extra support
+ - Playlist support
 
  - fix --cddb=URL
  - fix --cdda[=MB]
