*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -12,11 +12,14 @@
 - supports id3 tags
 <p>
 <a name="032">0.3.2</a><br>
+- this release supports ~X more formats than the previous release
 - added --ao[=DRIVER] write to soundcard using libao DRIVER (default: auto)
 - added libaudiofile (for reading) support
 - added support for (cable-free) CDDA playback
 - added --cddb read CDDB info from freedb.org
 - added --esd write to soundcard using EsounD
+- added libsndfile (for reading) support
+- added libmikmod support
 <!--
  - test/fix misc options
 
