*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -19,44 +19,52 @@
 - added --cddb read CDDB info from freedb.org
 - added --esd write to soundcard using EsounD
 - added libsndfile (for reading) support
-- added libmikmod support
 <!--
- - test/fix misc options
+- added libmikmod support
+- added libxmp support
+- added ffmpeg (audio only) support
+- added libmpeg (alternative mp3 decoder) support
+- added libst (sox sound tools/effects) support
+- added libOpenSPC (SNES) support
+- added libwavpack support
+- added libflite (speech synthesis) support
+- added festival (speech synthesis) support
+- added libsidplay (SID tunes) support
+- added ALSA support
+- added Joystick (rewind, fast-forward and pause) support
+- added libSDL support
 
- - add --rr
+- fix   --rr[=MAX[:MIN]] Random Radio (idea by Benno Hoelle)
+- memorize cmdline in config file
 
- - joystick support
- - alsa support
- - libst support
- - lyrics support
- - server/client support (streaming)
+- lyrics support
+- server/client support (streaming)
 
- - midi support (timidity)
- - GameBoy GBS Music soundtracks of Nintendo GameBoy games
- - GameBoy Advance GSF Music soundtracks of GameBoy Advance games
- - Genesis GYM Music soundtracks of Sega Genesis and 32X games
- - PC Engine HES Music soundtracks of PC Engine/Turbo Grafx 16 games
- - Nintendo NSF Music soundtracks of Nintendo games
- - Nintendo 64 USF Music soundtracks of Nintendo 64 games
- - Playstation PSF/PSF2 Music soundtracks of Playstation and PS2 games
- - SMS/GG VGM Music soundtracks of Sega Master System and Game Gear games
- - Super Nintendo SPC Music soundtracks of Super Nintendo games
- - ape support
- - ffmpeg support
+- midi support (timidity)
+- GameBoy GBS Music soundtracks of Nintendo GameBoy games
+- GameBoy Advance GSF Music soundtracks of GameBoy Advance games
+- Genesis GYM Music soundtracks of Sega Genesis and 32X games
+- PC Engine HES Music soundtracks of PC Engine/Turbo Grafx 16 games
+- Nintendo NSF Music soundtracks of Nintendo games
+- Nintendo 64 USF Music soundtracks of Nintendo 64 games
+- Playstation PSF/PSF2 Music soundtracks of Playstation and PS2 games
+- SMS/GG VGM Music soundtracks of Sega Master System and Game Gear games
+- Super Nintendo SPC Music soundtracks of Super Nintendo games
+- ape support
 
- - cdxa support
- - support stdin as input (read.c)
- - more gracetime for flite? (check if child process still exists)
- - PC speaker
- - soundmosaic effect
- - rewind/fastforward _with_ sound
- - cd-text and cd-extra support
- - Playlist support
+- cdxa support
+- support stdin as input (read.c)
+- PC speaker
+- soundmosaic effect
+- rewind/fastforward _with_ sound
+- cd-text and cd-extra support
 
- - fix --cddb=URL
- - fix --cdda[=MB]
- - fix stdout
- - fix --wav and --raw output (indices!)
- - fix decode
+- Playlist support
+
+- fix --cddb=URL
+- fix --cdda[=MB]
+- fix stdout
+- fix --wav and --raw output (indices!)
+- fix decode
 -->
 </tt></body></html>
