*** empty log message ***

--- a/quh/readme.html
+++ b/quh/readme.html
@@ -58,7 +58,7 @@ Filter
   --stdout      write to stdout
   --oss[=DEVICE] write to soundcard DEVICE using OSS (default: /dev/dsp)
 
-Please report any problems/ideas/fixes to noisyb@gmx.net or surf to
+Please report any problems/ideas/fixes to <img src="images/email.png" border="0"> or surf to
                                           http://quh.berlios.de
 
 </pre></tt></body></html>
