*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -34,6 +34,7 @@
 - added Joystick (rewind, fast-forward and pause) support
 - added libSDL support
 
+- fix "unknown filetype" when soundcard is blocked
 - fix   --rr[=MAX[:MIN]] Random Radio (idea by Benno Hoelle)
 - memorize cmdline in config file
 
