--- a/quh/readme.html
+++ b/quh/readme.html
@@ -1,7 +1,7 @@
 <html><head>
 <link rel="icon" href="images/icon.png" type="image/png">
 <title>Quh - README</title></head><body bgcolor="#ffffff"><pre><tt>
-Quh 0.3.1 'Having ears makes sense again' 2005-2006 by NoisyB (noisyb@gmx.net)
+Quh 0.3.1 'Having ears makes sense again' 2005-2006 by NoisyB
 This may be freely redistributed under the terms of the GNU Public License
 
 Usage: quh [OPTION]... [PLAYLIST|FILE|-]... [FILTER]...
