*** empty log message ***

--- a/htdocs/quh/readme.html
+++ b/htdocs/quh/readme.html
@@ -1,7 +1,7 @@
 <html><head>
 <link rel="icon" href="images/icon.png" type="image/png">
 <title>Quh - README</title></head><body bgcolor="#ffffff"><pre><tt>
-Quh 0.3.1 'Having ears makes sense again' 2005-2006 by NoisyB (noisyb@gmx.net)
+Quh 0.3.1 'Having ears makes sense again' 2005-2006 by NoisyB
 This may be freely redistributed under the terms of the GNU Public License
 
 Usage: quh [OPTION]... [PLAYLIST|FILE|-]... [FILTER]...
@@ -58,7 +58,7 @@ Filter
   --stdout      write to stdout
   --oss[=DEVICE] write to soundcard DEVICE using OSS (default: /dev/dsp)
 
-Please report any problems/ideas/fixes to noisyb@gmx.net or surf to
+Please report any problems/ideas/fixes to <img src="images/email.png" border="0"> or surf to
                                           http://quh.berlios.de
 
 </pre></tt></body></html>
