--- a/quh/changes.html
+++ b/quh/changes.html
@@ -12,7 +12,7 @@
 - supports id3 tags
 <p>
 <a name="032">0.3.2</a><br>
-- this release supports ~X more formats than the previous release
+- this release supports more than 30 new formats/filters
 - added --ao[=DRIVER] write to soundcard using libao DRIVER (default: auto)
 - added libaudiofile (for reading) support
 - added support for (cable-free) CDDA playback
