*** empty log message ***

--- a/quh/changes.html
+++ b/quh/changes.html
@@ -19,6 +19,9 @@
 - added --cddb read CDDB info from freedb.org
 - added --esd write to soundcard using EsounD
 - added libsndfile (for reading) support
+<p>
+<a name="033">0.3.3</a><br>
+- more code cleanup
 <!--
 - added libmikmod support
 - added libxmp support
